--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "d3": "^3.5.12",
+    "queue": "^6.0.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "topojson": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
